# SPIRV-LLVM-Translator

./: .gitignore  CMakeLists.txt  LLVMSPIRVLib.pc.in  README.md
.github/workflows/: check-code-style.yml  check-in-tree-build.yml  check-out-of-tree-build.yml  patch-release.yaml
include/: LLVMSPIRVExtensions.inc
lib/SPIRV/: CMakeLists.txt  OCLToSPIRV.cpp  OCLUtil.cpp  OCLUtil.h  SPIRVInternal.h  SPIRVReader.cpp  SPIRVToLLVMDbgTran.cpp  SPIRVToOCL.cpp  SPIRVToOCL20.cpp  SPIRVUtil.cpp  SPIRVWriter.cpp
test/: AlignmentId.spvasm  AtomicBuiltinsFloat.ll  AtomicCompareExchange.ll  AtomicCompareExchangeWeak.spvasm  AtomicCompareExchange_cl20.ll  CMakeLists.txt  CheckCapKernelWithoutKernel.ll  ComparePointers.cl  ContractionON.ll  ContractionOff.ll  EnqueueEmptyKernel.ll  ExecutionMode.ll  ExtendBitBoolArg.ll  FCmpFalse.ll  FCmpFalse_Vec.ll  FOrdGreaterThanEqual_bool.ll  FOrdGreaterThanEqual_int.ll  FPFastMathModeNotNaNFast.spvasm  GEPOperator.spvasm  GlobalVarAddrspace.ll  GroupAndSubgroupInstructions.spvasm  LocalSizeHintId.spvasm  LocalSizeId.spvasm  MaxByteOffsetId.spvasm  OpBitcast_ptr_scalar.spvasm  OpBitcast_ptr_vector.spvasm  OpConstantNull.spvasm  OpConvertPtrToU_narrowing.spvasm  OpConvertPtrToU_widening.spvasm  OpConvertUToPtr_narrowing.spvasm  OpConvertUToPtr_widening.spvasm  OpCopyLogical.spvasm  OpCopyMemory.spvasm  OpDecorateString_UserSemantic.spvasm  OpDecorateString_UserSemantic_Builtin.spvasm  OpFMod_f32.spvasm  OpFMod_v2f16.spvasm  OpGroupIAdd.spt  OpIAdd.spvasm  OpIMul.spvasm  (+148 more)
test/CXX/: global-ctor.cl
test/DebugInfo/: BuiltinCallLocation.cl  DebugControlFlow.cl  DebugDeclareUnused.cl  DebugFunction.cl  DebugInfo-GV-with-DIE.ll  DebugInfo-GV-with-SMD-and-DIE.ll  DebugInfoChecksum.ll  DebugInfoChecksumCompileUnit.ll  DebugInfoGlobalVariableNone.spvasm  DebugInfoLLVMArg.ll  DebugInfoLexicalBlockDependency.ll  DebugInfoNoneEntity.ll  DebugInfoProducer.ll  DebugInfoSubrangeWithOnlyCount.spt  DebugInfoTypeBasic.ll  DebugInfoTypeInheritance.ll  DebugInfoTypeInheritance.spvasm  DebugInfoTypePtrToMember.spvasm  DebugInfoTypeVector.spvasm  DebugInfoVector.ll  DebugInfoWithUnknownIntrinsics.ll  DebugTypeMember.ll  DebugTypeMember.spvasm  DebugUnstructuredControlFlow.cl  InvalidSourceLanguageSPIRVtoLLVM.spvasm  expr-opcode.ll  (+11 more)
tools/llvm-spirv/: CMakeLists.txt  llvm-spirv.cpp
(+676 files in other folders)
